--- a/frontend/views/js_templates/_templates.html.erb
+++ b/frontend/views/js_templates/_templates.html.erb
@@ -1,5 +1,17 @@
-<div id="template_custom_restrictions_context"><!--
+<div id="template_custom_restrictions_context_and_location"><!--
 <button id="custom-restriction-mini-tree-loader" class="btn btn-info context-button" aria-controls="custom-restrictions-mini-tree" aria-expanded="false">
-  <%= I18n.t("custom_restrictions_and_context.mini_tree_action") %>
+  <%= I18n.t("custom_restrictions_and_context.mini_tree_action.context_and_location") %>
+</button>
+--></div>
+
+<div id="template_custom_restrictions_context_only"><!--
+<button id="custom-restriction-mini-tree-loader" class="btn btn-info context-button" aria-controls="custom-restrictions-mini-tree" aria-expanded="false">
+  <%= I18n.t("custom_restrictions_and_context.mini_tree_action.context_only") %>
+</button>
+--></div>
+
+<div id="template_custom_restrictions_location_only"><!--
+<button id="custom-restriction-mini-tree-loader" class="btn btn-info context-button" aria-controls="custom-restrictions-mini-tree" aria-expanded="false">
+  <%= I18n.t("custom_restrictions_and_context.mini_tree_action.location_only") %>
 </button>
 --></div>
