--- a/frontend/views/mini_tree/_context.html.erb
+++ b/frontend/views/mini_tree/_context.html.erb
@@ -1,3 +1,5 @@
+<% has_tree_class = @tree.blank? ? 'no-context-tree' : 'has-context-tree' %>
+
 <% unless @restrictions.blank? %>
   <% @restrictions.each do |level, restriction| %>
     <div id="custom-restriction" class="label label-danger">
@@ -13,31 +15,33 @@
     <% end %>
 <% end %>
 <% unless @tree.blank? && @location.blank? %>
-  <div id="custom-restrictions-mini-tree">
-    <% unless @tree.blank? %>
-      <div id="mini-tree-context">
-        <% @tree.each_with_index do |(level, title), idx| %>
-          <span class="mini-tree-level-<%= idx %>"><span class="mini-tree-leveltype"><%= level.capitalize %>: </span><%= title %></span>
-        <% end %>
-      </div>
-    <% end %>
-    <% unless @location.blank? %>
-      <div id="mini-tree-locations-and-indicators">
-        <% @location.each do |loc| %>
-          <div class="mini-tree-location">
-            <div>
-              <div class="mini-tree-indicator">
-                Location: <%= loc['type'].nil? ? 'Container' : loc['type'].capitalize %> <%= loc['indicator']%>
-              </div>
-              <div class="mini-tree-locations">
-                <% loc['locations'].each do |place| %>
-                <span class="mini-tree-location-place"><%= place %></span>
-                <% end %>
+  <% unless AppConfig.has_key?(:aspace_custom_restrictions_show_context) && AppConfig[:aspace_custom_restrictions_show_context] == false %>
+    <div id="custom-restrictions-mini-tree">
+      <% unless @tree.blank? %>
+        <div id="mini-tree-context">
+          <% @tree.each_with_index do |(level, title), idx| %>
+            <span class="mini-tree-level-<%= idx %>"><span class="mini-tree-leveltype"><%= level.capitalize %>: </span><%= title %></span>
+          <% end %>
+        </div>
+      <% end %>
+      <% unless @location.blank? %>
+        <div id="mini-tree-locations-and-indicators" class="<%= has_tree_class %>">
+          <% @location.each do |loc| %>
+            <div class="mini-tree-location">
+              <div>
+                <div class="mini-tree-indicator">
+                  <%= loc['type'].nil? ? 'Container' : loc['type'].capitalize %> <%= loc['indicator']%>
+                </div>
+                <div class="mini-tree-locations">
+                  <% loc['locations'].each do |place| %>
+                  <span class="mini-tree-location-place"><%= place %></span>
+                  <% end %>
+                </div>
               </div>
             </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 <% end %>
