--- a/frontend/views/_top_of_basic_information_digital_object_component.html.erb
+++ b/frontend/views/_top_of_basic_information_digital_object_component.html.erb
@@ -1,26 +1,16 @@
-<% unless current_repo.nil? || @resource.nil? %>
+<% unless current_repo.nil? || @digital_object_component.nil? %>
   <% if controller.action_name == 'show' %>
     <% 
       display_context = true
       if AppConfig.has_key?(:aspace_custom_restrictions_show_context) && AppConfig[:aspace_custom_restrictions_show_context] == false 
         display_context = false
       end
-
-      resource_location = AspaceCustomRestrictionsContextHelper.get_location(@resource)
-
-      resource_restriction = AspaceCustomRestrictionsContextHelper.is_restricted?(@resource)
-
-      resource_data = render(:partial => 'mini_tree/context', :locals => {
-        :@restrictions => resource_restriction,
-        :@tree => '',
-        :@location => resource_location
-      })
     %>
     <script>
       $().ready(() => {
         const custom_restriction = new CustomRestrictionsAndContext(`<%= current_repo.id %>`, <%= display_context %>);
         custom_restriction.displayMiniTreeLoader();
-        custom_restriction.addMiniTree(`<%= resource_data %>`);
+        custom_restriction.fetchObjectJson(`<%= @digital_object_component.id %>`, 'digital_object_components');
       });
     </script>
   <% end %>
