--- a/public/views/custom_restrictions/_custom_restrictions_action.html.erb
+++ b/public/views/custom_restrictions/_custom_restrictions_action.html.erb
@@ -1,4 +1,6 @@
 <script>
-  const customObjectRestriction = new CustomRestrictionsPui();
-  customObjectRestriction.setupObjectRestrictionDisplay('<%= record.uri %>');
+  $().ready(() => {
+    const customObjectRestriction = new CustomRestrictionsPui();
+    customObjectRestriction.setupObjectRestrictionDisplay('<%= record.uri %>');
+  });
 </script>
