--- a/frontend/views/mini_tree/_context.html.erb
+++ b/frontend/views/mini_tree/_context.html.erb
@@ -3,14 +3,16 @@
 <% unless @restrictions.blank? %>
   <% @restrictions.each do |level, restriction| %>
     <div id="custom-restriction" class="label label-danger">
-      <%= 
-        I18n.t('custom_restrictions_and_context.restriction_label', 
-          {
-            :level => level.titleize,
-            :restriction => I18n.t('enumerations.custom_restriction_type.' + restriction, I18n.t('enumerations.custom_restriction_type.default'))
-          }
-        )
-      %>
+      <span>
+        <%= 
+          I18n.t('custom_restrictions_and_context.restriction_label', 
+            {
+              :level => level.titleize,
+              :restriction => I18n.t('enumerations.custom_restriction_type.' + restriction, I18n.t('enumerations.custom_restriction_type.default'))
+            }
+          )
+        %>
+      </span>
     </div>
     <% end %>
 <% end %>
@@ -20,7 +22,7 @@
       <% unless @tree.blank? %>
         <div id="mini-tree-context">
           <% @tree.each_with_index do |(level, title), idx| %>
-            <span class="mini-tree-level-<%= idx %>"><span class="mini-tree-leveltype"><%= level.capitalize %>: </span><%= title %></span>
+            <span class="mini-tree-level-<%= idx %>"><span class="mini-tree-leveltype"><%= level.titleize %>: </span><%= title %></span>
           <% end %>
         </div>
       <% end %>
