--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -12,14 +12,16 @@
       controller.controller_name == "accessions"
     end
     def is_digital_object_idx? 
-      controller.controller_name == "digital_objects"
+      controller.controller_name == "objects"
     end
   %>
 
   <% if is_search? || is_accession_idx? || is_digital_object_idx? || is_resource_idx? %>
   <script>
-    const puiSearchRestrictions = new CustomRestrictionsPui();
-    puiSearchRestrictions.setupDecoratePuiSearch();
+    $().ready(() => {
+      const puiSearchRestrictions = new CustomRestrictionsPui();
+      puiSearchRestrictions.setupDecoratePuiSearch();
+    });
   </script>
   <% end %>
 <% end %>
