--- a/public/views/custom_restrictions/_custom_restrictions_action.html.erb
+++ b/public/views/custom_restrictions/_custom_restrictions_action.html.erb
@@ -1,6 +1,6 @@
 <script>
   $().ready(() => {
     const customObjectRestriction = new CustomRestrictionsPui();
-    customObjectRestriction.setupObjectRestrictionDisplay('<%= record.uri %>');
+    customObjectRestriction.setupObjectRestrictionDisplay('<%= record.uri %>', '<%= record.primary_type %>');
   });
 </script>
