--- a/frontend/views/_top_of_basic_information_resource.html.erb
+++ b/frontend/views/_top_of_basic_information_resource.html.erb
@@ -19,7 +19,7 @@
     <script>
       $().ready(() => {
         const custom_restriction = new CustomRestrictionsAndContext(`<%= current_repo.id %>`, <%= display_context %>);
-        custom_restriction.displayMiniTreeLoader();
+        custom_restriction.displayMiniTreeToggle();
         custom_restriction.addMiniTree(`<%= resource_data %>`);
       });
     </script>
