--- a/frontend/assets/custom_restrictions_context.css
+++ b/frontend/assets/custom_restrictions_context.css
@@ -83,18 +83,29 @@ span.mini-tree-level-0::before {
   border-top: 1px solid #ccc;
 }
 #mini-tree-locations-and-indicators.no-context-tree {
+  margin-top: 0;
+  padding-top: 0;
   border: none;
 }
 .mini-tree-location {
   display: grid;
   grid-template-columns: min-content 1fr;
   gap: 1rem;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #ccc;
+}
+.mini-tree-location:last-of-type {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border: none;
 }
 .mini-tree-location::before {
   content: "\e0c8";
   font-family: "Material Symbols Outlined";
   font-variation-settings: "FILL" 1;
   font-size: 2rem;
+  color: #666;
 }
 
 /* Search */
