--- a/frontend/views/_top_of_basic_information_digital_object_component.html.erb
+++ b/frontend/views/_top_of_basic_information_digital_object_component.html.erb
@@ -5,12 +5,20 @@
       if AppConfig.has_key?(:aspace_custom_restrictions_show_context) && AppConfig[:aspace_custom_restrictions_show_context] == false 
         display_context = false
       end
+
+      restriction, location, tree = AspaceCustomRestrictionsContextHelper.view_content(@digital_object_component['uri'])
+
+      view_data = render(:partial => 'mini_tree/context', :locals => {
+        :@restrictions => restriction,
+        :@tree => tree,
+        :@location => location
+      })
     %>
     <script>
       $().ready(() => {
         const custom_restriction = new CustomRestrictionsAndContext(`<%= current_repo.id %>`, <%= display_context %>);
         custom_restriction.displayMiniTreeToggle();
-        custom_restriction.fetchObjectJson(`<%= @digital_object_component.id %>`, 'digital_object_components');
+        custom_restriction.addMiniTree(`<%= view_data %>`);
       });
     </script>
   <% end %>
