--- a/frontend/assets/custom_restrictions_context.css
+++ b/frontend/assets/custom_restrictions_context.css
@@ -127,3 +127,24 @@ span.mini-tree-level-0::before {
   border: none;
   font-size: 1.4rem;
 }
+
+/* Trees */
+.custom-restriction-visual-identifier::before {
+  content: "\e002";
+  vertical-align: bottom;
+  color: #a72925;
+  font-family: "Material Symbols Outlined";
+  font-variation-settings: "FILL" 1;
+}
+
+.custom-restrictions-visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0,0,0,0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
