--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,8 +1,10 @@
 <% unless AppConfig.has_key?(:aspace_custom_restrictions_pui_enhance) && AppConfig[:aspace_custom_restrictions_pui_enhance] == false %>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <%= stylesheet_link_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_pui.css" %>
   <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_pui.js" %>
-
+  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_tree_additions_pui.js" %>
   <% 
+
     def is_search? 
       controller.controller_name == "search"
     end
@@ -15,13 +17,48 @@
     def is_digital_object_idx? 
       controller.controller_name == "objects"
     end
+
+    custom_restrictions_object_data = {}
+    if is_search? || is_accession_idx? || is_resource_idx? || is_digital_object_idx?
+      unless @results.nil?
+        @results.records.each do |full_result|
+          result = full_result.raw
+          unless result.nil? || result['custom_restrictions_u_sstr'].nil?
+            restrictions = []
+
+            raw_restrictions = result['custom_restrictions_u_sstr'].nil? ? {} : ASUtils.json_parse(result['custom_restrictions_u_sstr'].first)
+            raw_restrictions.each do |level, restriction|
+              begin
+                restriction_message = I18n.t('enumerations.custom_restriction_type.' + restriction, :raise => I18n::MissingTranslationData)
+              rescue I18n::MissingTranslationData
+                restriction_message = I18n.t('enumerations.custom_restriction_type.default')
+              end
+              restrictions << I18n.t('custom_restrictions_and_context.restriction_label', 
+                                {
+                                  :level => level.titleize,
+                                  :restriction => restriction_message
+                                }
+                              )
+            end
+            
+            custom_restrictions_object_data[result['id']] = {
+              'custom_restrictions' => restrictions,
+            }
+          end
+        end
+      end
+    end
   %>
 
   <% if is_search? || is_accession_idx? || is_digital_object_idx? || is_resource_idx? %>
   <script>
     $().ready(() => {
-      const puiSearchRestrictions = new CustomRestrictionsPui();
+      const puiSearchRestrictions = new CustomRestrictionsPui(`<%= raw ASUtils.to_json(custom_restrictions_object_data) %>`);
       puiSearchRestrictions.setupDecoratePuiSearch();
+      if (typeof tree !== 'undefined') {
+        const customTree = new CustomRestrictionsTree(tree);
+        customTree.initialize();
+      }
     });
   </script>
   <% end %>
