Infinite Records & Mutations
- switch to MutationObserver for trees
- subclass tree and infinite record classes to main tree class
- add enhancements for infinite records pane and tree

--- a/frontend/views/layout_head.html.erb
+++ b/frontend/views/layout_head.html.erb
@@ -79,7 +79,7 @@
         <% end %>
         <% unless AppConfig.has_key?(:aspace_custom_restrictions_staff_tree) && AppConfig[:aspace_custom_restrictions_staff_tree] == false %>
           if (typeof tree !== 'undefined') {
-            const customTree = new CustomRestrictionsTree(tree, `<%= current_repo.id %>`);
+            const customTree = new CustomRestrictionsTree(`<%= current_repo.id %>`);
             customTree.initialize();
           }
         <% end %>
