--- a/frontend/views/js_templates/_templates.html.erb
+++ b/frontend/views/js_templates/_templates.html.erb
@@ -32,7 +32,7 @@
         <div class="mini-tree-location">
           <div>
             <div class="mini-tree-indicator">
-              ${location.type}
+              ${location.display_string}
             </div>
             <div class="mini-tree-locations">
               {for place in location.places}
