--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,12 +1,7 @@
 <% unless AppConfig.has_key?(:aspace_custom_restrictions_pui_enhance) && AppConfig[:aspace_custom_restrictions_pui_enhance] == false %>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <%= stylesheet_link_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_pui.css" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_pui.js" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_tree_base.js" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_tree_additions_pui.js" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_infinite_tree.js" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_infinite_records.js" %>
-  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/custom_restrictions_infinite_scroll.js" %>
+  <%= stylesheet_link_tag "#{AppConfig[:public_proxy_prefix]}assets/#{AppConfig[:aspace_custom_restrictions_pui_assets_filename]}.css" %>
+  <%= javascript_include_tag "#{AppConfig[:public_proxy_prefix]}assets/#{AppConfig[:aspace_custom_restrictions_pui_assets_filename]}.js" %>
   <% 
 
     def is_search? 
